# applsoftcomp-sprint-m02

./: pyproject.toml  run.sh
docs/: 1d-multi-method-notes.md  notes-1d-data.md  notes-2d-data.md  notes-digits.md
notebooks/: data-exploration.ipynb
workflow/: digits_data.py  format_1d_data.py  viz_1d_data.py  viz_1d_multi_data.py  viz_2d_data.py
