[project]
name = "applsoftcomp-sprint-m02"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Narrara M. (forked from original by Dr. Kojaku)"},
]
license = {file = "LICENSE"}

dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "pandas>=1.3.0",
    "scipy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "marimo>=0.16.1",
    "scikit-learn>=1.0.0",
    "nvitop>=1.5.3",
    "umap-learn>=0.5.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "ipykernel",
    "isort",
    "mypy",
    "docformatter",
]

# pyproject.toml
[tool.isort]
profile = "black"
